# Predictive_Modeling

./: .gitignore  .pre-commit-config.yaml  Getting_Started.md  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yml
Sports_predictions/: Sports.md
Sports_predictions/pipelines/: data_loader.py  pipeline_1_linear_regression.py  pipeline_2_random_forest.py  pipeline_3_gradient_boosting.py  pipeline_4_ridge_lasso.py  pipeline_5_knn.py  pipeline_6_svr.py
TODO_PIPELINES/: Logan_Pipelines.MD  abby_pipeline.md  lillie_pipeline.md  nathanbao_pipelines.md  samantha_pipeline.md  sri_pipelines.md
data/data_scraping/: Logan_OilFutures.py  Logan_OilFutures_preprocessing.py  fetch_nba_pra.py  nathanbao_nba.py  nathanbao_nba_preprocessing.py
data/finance_data/processed/: Logan_OilFuturesProcessed.csv
data/finance_data/raw/: Logan_OilFuturesRaw.csv
data_scraping/: Lillie_QB_passing.py  Lillie_QB_passing_preprocessing.py
tests/: test_example.py
